Added translation, updated variables names, you have to press the button to start searching.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,9 @@
     <title>SavedAndHealthy</title>
 </head>
 <body>
-    <div style="text-align: center">
-    {% block content %}{% endblock %}
+    <div style="text-align: center; margin: 0 auto; width:80%;">
+        {% block chooseIngrades %}{% endblock %}
+        {% block recipsList %}{% endblock %}
     </div>
 </body>
 </html>
