Title of the browser card is taken from current used values from owned_ingredients

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SavedAndHealthy</title>
+    <title>{% block siteTitle %}{{ title }}{% endblock %}</title>
 </head>
 <body>
     <div style="text-align: center; margin: 0 auto; width:80%;">
